src/test/resources/json/invalid_inputs/too_large_start.json.except
Numeric value (1000000000000) out of range of int (-2147483648 - 2147483647)